# CppDemo

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
docs/API/: Http.md  SoftAide.md
docs/ForDeveloper/: Build - depend by git.md  Build - depend by vcpkg.md  Build.md  Dir.md  Lib.md  Libs.md
src/: main.cpp
src/http/: http.cpp  http.h
src/utils/: ClipText.cpp
